fix google dropdown for translation

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1534,7 +1534,7 @@ left:450px;
     top: 10px;
     left: 50px;
     width: 200px; /* Adjust the size as needed */
-    z-index: 5;
+    /* z-index: 1; */
 }
 
 #other-icons {
