Fix bold title in checkout, btn smaller

--- a/templates/excursions/excursions_base.html
+++ b/templates/excursions/excursions_base.html
@@ -116,7 +116,7 @@
     </div>
 </div>
 
-<div class="text-center">
+<div class="text-center mobile-btn" >
     <a href="{% url 'filter_by_descend' %}" class="group-button">Price High</a>
     <a href="{% url 'filter_by_ascend' %}" class="group-button">Price Low</a>
     <a href="{% url 'newest_result' %}" class="group-button">Newest</a>
