--- a/templates/checkout/checkout.html
+++ b/templates/checkout/checkout.html
@@ -18,7 +18,7 @@
           {% for item in cart_items %}
           <li class="list-group-item d-flex justify-content-between lh-condensed">
             <div>
-              <h6 class="my-0">{{item.excursion.title|slice:":25"|title}}</h6>
+              <h6 class="my-0" style="font-weight: bolder;">{{item.excursion.title|slice:":25"|title}}</h6>
               <div class="pt-3">
                 <small><img class="cart-detail-img" src="{{item.excursion.main_image.url}}"
                     alt="{{item.excursion.image_name}}"></small>
