temporary disble z-index on logo

--- a/templates/excursions/excursions_base.html
+++ b/templates/excursions/excursions_base.html
@@ -59,6 +59,32 @@
   </script>
     
 </head>
+<!-- 
+<style>
+    #google_translate_element{
+    z-index: 6 !important;
+}
+.VIpgJd-ZVi9od-xl07Ob-lTBxed{
+    border:2px solid pink;
+}
+.goog-te-gadget-simple .VIpgJd-ZVi9od-xl07Ob-lTBxed{
+    border:2px solid green;
+}
+.goog-te-gadget-simple{
+    z-index: 6 !important;
+    border:2px solid yellow;
+}
+.goog-te-gadget-simple .VIpgJd-ZVi9od-xl07Ob-lTBxed span {
+    z-index: 6 !important;
+   border:2px solid red;
+}
+
+.VIpgJd-ZVi9od-vH1Gmf-ibnC6b div, .VIpgJd-ZVi9od-vH1Gmf-ibnC6b:link div, .VIpgJd-ZVi9od-vH1Gmf-ibnC6b:visited div, .VIpgJd-ZVi9od-vH1Gmf-ibnC6b:active div{
+    border:2px solid red;
+    z-index: 6 !important;
+}
+
+</style> -->
 <div id="google_translate_element"></div>
 <!---------------------------------------------------- google translate btn -->
 <div id="hero-section">
