--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -1528,9 +1528,9 @@ left:450px;
 #logo-site {
     position: absolute;
     top: 10px;
-    left: 50px;
+    left: 35px;
     width: 300px; /* Adjust the size as needed */
-    z-index: 1;
+    /* z-index: 1; */
 }
 
 #other-icons {
