add children price

--- a/templates/excursions/excursion_details.html
+++ b/templates/excursions/excursion_details.html
@@ -124,6 +124,9 @@
                         <input type="hidden" name="redirect_url" value="{{request.path}}">
                         <!-- hidden input for the price-->
                         <input type="hidden" name="price" value="{{excursions.Price}}">
+                        <!-- hidden input for the children price -->
+                        <input type="hidden" name="price_children" value="{{excursions.price_children}}">
+                    
                         <!-- form btn -->
                         <div class="form_detail_btn">
                             <!-- go back to keep shopping btn -->
