Fix cart responsive

--- a/templates/cart/excursions_cart.html
+++ b/templates/cart/excursions_cart.html
@@ -19,7 +19,7 @@
         {% if cart_items %}
         <div class="cart-container">
 
-            <div class="cart-item-detail">
+            <div class="cart-item-detail table_wrapper  table-responsive">
                 <!-- table -->
                 <table class="table">
                     <thead>
