Addd btn scroll for cart

--- a/templates/administrator/administrator.html
+++ b/templates/administrator/administrator.html
@@ -66,7 +66,7 @@
         <!-- today excursions bookings admin -->
         <h4 class="text-center mt-5">Today Excursion Bookings <span
                 class="badge bg-site-color">{{today_excursion_bookings.count}}</span></h4>
-        <div class="table_wrapper table-responsive">
+        <div class="table-responsive">
             <table class="data_table">
                 <tr>
                     <th>Image</th>
