--- a/templates/cart/excursions_cart.html
+++ b/templates/cart/excursions_cart.html
@@ -6,6 +6,23 @@
 {% load account socialaccount %}
 
 {% block content %}
+
+<style>
+    .table_wrapper {
+        max-height: 300px; /* Set the maximum height for the scrollable area */
+        overflow-y: auto; /* Enable vertical scrolling */
+        width: 100%; /* Ensure the table takes full width */
+    }
+    .table-responsive {
+        width: 100%;
+        overflow-x: auto;
+    }
+    .data_table {
+        width: 100%; /* Ensure the table takes full width */
+    }
+    /* Add additional styling as needed */
+</style>
+
 <section>
     <div class="container mb-2">
         <div class="row">
@@ -16,6 +33,7 @@
                 <hr>
             </div>
         </div>
+
         {% if cart_items %}
         <div class="cart-container">
 
