Add active sellers btn

--- a/templates/administrator/active_sellers.html
+++ b/templates/administrator/active_sellers.html
@@ -129,7 +129,7 @@
                     <th></th>
                 </tr>
 
-                {% for seller in all_sellers %}
+                {% for seller in active_sellers %}
                 <tr>
                     <td>{{seller.full_name}}</td>
                     <td>{{seller.bank_name}}</td>
