Add active seller to search

--- a/templates/administrator/search_sellers.html
+++ b/templates/administrator/search_sellers.html
@@ -109,6 +109,9 @@
             <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
                 <li><button class="dropdown-item" type="button"><a class="dropdown-item" href="{% url 'seller' %}">All
                             Sellers</a></button></li>
+                <li><button class="dropdown-item" type="button"><a class="dropdown-item" href="{% url 'active-sellers' %}">
+                                Sellers with active numbers</a></button></li>
+
             </ul>
         </div>
 
