Fix items title in detail

--- a/templates/excursions/excursion_details.html
+++ b/templates/excursions/excursion_details.html
@@ -12,7 +12,7 @@
 <div class="header-pop-up-cart">
     <div class="cart-pop-up-title"><i class="fa-solid fa-circle-check" style="color:green"></i> Added to cart </div>
     <img class="cart-pop-up-img" src="{{last_item.excursion.main_image.url}}" alt="{{excursion.image_name}}" style="width:100px">
-    <span class="x">{{last_item.excursion.title}}</span>
+    <span class="item-title-pop-up">{{last_item.excursion.title}}</span>
     <p class="cart-excursion_date-pop-up">{{last_item.values.excursion_date}}</p>
     <div id="time-container">
         <p class="p-pop-cart">We’ll hold your spot for <span id="timer"> </span> minutes</p>
