--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1889,7 +1889,9 @@ iframe {
     margin-left:0;
     }
     .item-title-pop-up{
-        margin-left: 10px;
+        display: block;
+        padding: 5px;
+
     }
     .cart-excursion_date-pop-up{
         margin-left: 0px;
