add hearders rentals words and meta descriptions

--- a/templates/rentals/rental_details.html
+++ b/templates/rentals/rental_details.html
@@ -1,4 +1,6 @@
 {% extends 'rentals/rentals_base.html' %}
+{% block title %}{{rentals.title}}{% endblock %}
+{% block description %}{{ rentals.meta_description }}{% endblock %}
 {% load static %}
 
 {% block content %}
