--- a/templates/rentals/rentals_base.html
+++ b/templates/rentals/rentals_base.html
@@ -7,9 +7,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description"
-        content="{% block description %}Explore and discover the best 2023 Punta Cana excursions for family adventures, including Saona Island tours and unique activities in Punta Cana Bavaro. Discover excursiones en Republica Dominicana, delve into the Caribbean's treasures, and find excursiones near you. Contact excursiones VIP Punta Cana for affordable, child-friendly options, and explore the diverse excursiones Punta Cana has to offer, all at great prices. Don't miss the top Punta Cana tours and tourist attractions with trusted tour companies.{% endblock %}">
+        content="{% block description %}Discover your perfect escape with our 2023 Punta Cana Rentals. Explore handpicked accommodations, including beachfront villas, cozy apartments, and luxurious hotel rooms, ensuring an unforgettable stay in this tropical paradise. Immerse yourself in luxury and comfort, tailoring your experience to romantic getaways, family retreats, or solo adventures. Your private oasis awaits – secure your dream villa, room, apartment, or hotel accommodation now for an unparalleled Punta Cana vacation.{% endblock %}">
     <meta name="keywords"
-        content="punta cana, Discovery, adventure, the adventure travelers, 2023, backpacking tours,explore tours, vacations, biking tours,adventure travel, bavaro,excursions,Visit Saona Island, blue Caribbean, natural swimming pool, Day Trip, things to do in puntacana, puntacana Scape Park Punta Cana, Wild Buggy Eco Adventure, Full Safari Zipline, Buggies & Horse Riding, Hoyo Azul y Cap Cana,Excursión de un día isla Saona, Cana Off-Road Dune, Amazing Water Cave,tours, Horseback City Tour, Cacao Farm, Zipline / Dune Full-Day Catalina Island Snorkeling Tour Ecological Riding Paradise, Diving: Certification Required, Scuba Diving Adventure: Certified Experience, with Altos Chavon - All Inclusive, Santo Domingo Colonial Samaná Cayo Levantado and Cascada Limón, Playa Rincon Levantado, Los Haitises National Montana Redonda, River Lunch">
+        content="Punta Cana, vacation rentals, beachfront villas, cozy apartments, hotel rooms, luxury accommodations, tropical getaway, family retreat, solo adventure, Caribbean vacation, Punta Cana escape, travel destination">
     <meta name="author" content="Gerson De La Cruz">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="canonical" href="https://www.puntacana-explore.com/excursions/">
@@ -97,7 +97,7 @@
     <img id="hero-image" src="{% static 'images/excursions/hero-img-puj.jpg' %}" alt="Hero Image">
 
     <!-- titles -->
-    <div id="title_hero">Memorable Adventures Await: Unforgettable Excursion Experiences</div>
+    <div id="title_hero">Unforgettable Retreats Await: Exceptional Rental Experiences</div>
 
     <!-- Add more square links as needed -->
     <div class="square-btn"><span class="main-link underline-btn"><a href="{% url 'excursions' %}">Excursions</a></span>
