--- a/templates/rentals/filters.html
+++ b/templates/rentals/filters.html
@@ -29,7 +29,7 @@
             </div>
 
             <div class="price">
-                £{{rental.Price}}
+                ${{rental.Price}}
             </div>
         </div>
         {% endfor%} 
