--- a/templates/rentals/input_search_result.html
+++ b/templates/rentals/input_search_result.html
@@ -35,7 +35,7 @@
             </div>
 
             <div class="price">
-                £{{rental.Price}}
+                ${{rental.Price}}
             </div>
         </div>
 
