--- a/templates/rentals/rental_details.html
+++ b/templates/rentals/rental_details.html
@@ -33,7 +33,7 @@
             </div>
             <!-- item details aside -->
             <div class="item-detail card">
-                <form class="form" action="{% url 'add_rental' rentals.slug %}" method="POST">
+                <form class="form" action="{% url 'add_rental' rentals.id %}" method="POST">
                     {% csrf_token %}
 
                     <!-- price -->
