Fixe eroor in console.log

--- a/templates/excursions/excursion_details.html
+++ b/templates/excursions/excursion_details.html
@@ -251,4 +251,5 @@ var tomorrowDate = new Date('{{tomorrow_str}}'); // Tomorrow's date
 var disabledDays = '{{unavailableDay}}'; // Disables Sunday and Saturday
 </script>
 <script src="{% static 'js/calender.js' %}"></script>
+<script src="{% static 'js/timer_pop_up.js' %}"></script>
 {% endblock content %}
