--- a/templates/excursions/excursions_base.html
+++ b/templates/excursions/excursions_base.html
@@ -238,20 +238,6 @@
     }
 
 
-
-    // You can replace the URLs with the actual links you want to redirect to
-    document.getElementById("btn1").addEventListener("click", function () {
-        window.location.href = "https://www.example.com/link1";
-    });
-
-    document.getElementById("btn2").addEventListener("click", function () {
-        window.location.href = "https://www.example.com/link2";
-    });
-
-    document.getElementById("btn3").addEventListener("click", function () {
-        window.location.href = "https://www.example.com/link3";
-    });
-
 </script>
 
 <footer id="footer">
@@ -296,18 +282,9 @@
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
-<!-- jQuery -->
-<!-- <script src="https://code.jquery.com/jquery-3.6.0.js"></script> -->
-<!-- <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.js"
-        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script> -->
-<!-- Local Javascript -->
-
 <script src="{% static 'js/script.js' %}"></script>
 <script src="{% static 'js/dragable_whatsapp.js' %}"></script>
-<script src="{% static 'js/offerCountDown.js' %}"></script>
-<script src="{% static 'js/timer_pop_up.js' %}"></script>
-
+<!-- <script src="{% static 'js/offerCountDown.js' %}"></script> -->
 </body>
 
 </html>
