--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,7 +15,6 @@
 
 /* -------------------------------------------------------------------- Resets */
 .draggable {
-    position: fixed;
     width: 100px;
     height: 100px;
     text-align: center;
@@ -61,7 +60,7 @@ width:50px;
 }
 .whatsap-container{
     text-align: center;
-    padding: 10px;;
+    padding: 10px;
 }
 
 #logo{
