--- a/templates/excursions/excursion_details.html
+++ b/templates/excursions/excursion_details.html
@@ -126,7 +126,8 @@
                         <input type="hidden" name="price" value="{{excursions.Price}}">
                         <!-- hidden input for the children price -->
                         <input type="hidden" name="price_children" value="{{excursions.price_children}}">
-                    
+                      <!-- hidden input for the company price-->
+                        <input type="hidden" name="company_Price" value="{{excursions.company_Price}}">
                         <!-- form btn -->
                         <div class="form_detail_btn">
                             <!-- go back to keep shopping btn -->
