--- a/templates/checkout/checkout.html
+++ b/templates/checkout/checkout.html
@@ -52,8 +52,8 @@
 
           <li class="list-group-item d-flex justify-content-between">
             <span>Anticipo <span style="color:green">The payment required now to secure the reservation.</span></span>
-            <span>$</span><strong id="anticipo">
-              {{item.anticipo|floatformat:2}}
+           <strong id="anticipo">
+            <span>$</span>{{item.anticipo|floatformat:2}}
             </strong>
           </li>
 
